Verify tags against fixed list, to guard against typos

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -7,6 +7,7 @@ RootTags:
 - +formatting
 # Special tags
 - +broken
+- +hidden
 - +remove
 # Not exactly a "root tag", but the simplest way to silence complaints
 - +v
@@ -162,3 +163,43 @@ TagImplications:
   +ocpony: [+oc]
   +smooze: [+oldgen]
   +foodmane: [+mashup]
+
+OtherTags:
+  - +animote
+  - +banana
+  - +clap
+  - +coin
+  - +cozy
+  - +cuttershy
+  - +dealwithit
+  - +doctorwho
+  - +drinking
+  - +filly
+  - +fluffy
+  - +foe
+  - +fsjal
+  - +fun
+  - +gaming
+  - +headbop
+  - +heart
+  - +hovermote
+  - +human
+  - +imagemacro
+  - +mafia
+  - +manspike
+  - +mashup
+  - +no
+  - +pbjt
+  - +pinkamina
+  - +pony
+  - +questionable
+  - +salute
+  - +shadowbolt
+  - +shipping
+  - +shrug
+  - +sleeping
+  - +spider
+  - +sunglasses
+  - +tableflip
+  - +this
+  - +wetmane
