Add the Reddit News logo to the page next to the link to the emote pack

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,7 @@
 /www/index.html
 /www/changelog.html
 /www/chrome-update.html
-/www/firefox-logo.png
-/www/chrome-logo.png
-/www/opera-logo.png
+/www/*-logo.png
 /www/betterponymotes.update.rdf
 /www/opera-updates.xml
 
