Quick conflict fix between two identical emotes

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -173,6 +173,8 @@ Conflicts:
   /t18:           r/mylittlefoodmanes     # Conflict with r/tacoshy
   /tonightyou:    r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
   /twipoker:      r/mylittlewtf           # Conflict with r/thebestpony
+  /weegee:        r/vinylscratch          # Conflict with r/thebestpony, which
+                                          # came first, but they're the same
   /woonajuice:    r/mylittledaww          # Duplicated to r/mylittleanime
 
 RootVariantEmotes:
