/raricoffee conflict fix

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -161,6 +161,7 @@ Conflicts:
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
   /rabwant:       r/mylittlelivestream    # Conflict with r/applebloom
   /rapidfire:     r/mylittlechaos         # Conflict with r/mylittlemango
+  /raricoffee:    r/onetrueprincess       # Conflict with r/marmemotes
   /rwoonajuice:   r/mylittledaww          # Duplicated to r/mylittleanime
   /s:             r/falloutequestria      # Conflict with r/mylittleanime
   /sadlyra:       r/mylittleonions        # Conflict with r/mylittleanime
