--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -58,6 +58,7 @@ Subreddits:
 - mylittlecombiners
 - mylittleconspiracy
 - mylittledaww
+- mylittledurian
 - mylittlefalloutdiary
 - mylittlefoodmanes
 - mylittlefortress
