Add +skyrunner tag for an OC that has a bunch of emotes now

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -147,6 +147,7 @@ TagImplications:
   +milkyway: [+oc, +ocpony]
   +murkynumberseven: [+oc, +ocpony]
   +raynestorm: [+oc, +ocpony]
+  +skyrunner: [+oc, +ocpony]
   +snowdrop: [+oc, +ocpony]
   +surprise: [+oc, +ocpony]
   +wildfire: [+oc, +ocpony]
