Stylesheet/emote/tag updates 2013-07-01

--- a/emotes/thepleasurehub.json
+++ b/emotes/thepleasurehub.json
@@ -1,6 +1,7 @@
 {
   "/apexwhattheclop": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Size": [211, 200]}}},
   "/archmagesea": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -200], "Size": [206, 200]}}},
+  "/armoredshiningarmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Offset": [0, -450], "Size": [93, 150]}}},
   "/aussticky": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -1305], "Size": [213, 150]}}},
   "/cadancedress": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -1600], "Size": [122, 150]}}},
   "/cadancemean": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2800], "Size": [143, 150]}}},
@@ -16,6 +17,7 @@
   "/enyosadventure": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [-118, -2355], "Size": [118, 150]}}},
   "/enyoxtpp": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2350], "Size": [201, 150]}}},
   "/everythingisfine": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2500], "Size": [140, 150]}}},
+  "/eyebulgearmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Size": [116, 150]}}},
   "/gildabirds": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -1000], "Size": [150, 150]}}},
   "/gildacocked": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2050], "Size": [150, 150]}}},
   "/gildacrazed": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -2055], "Size": [160, 150]}}},
@@ -34,6 +36,9 @@
   "/skylicorn": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2200], "Size": [160, 150]}}},
   "/skyscrunch": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Size": [200, 200]}}},
   "/tenarispony": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -700], "Size": [150, 150]}}},
+  "/twilightarmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Offset": [0, -300], "Size": [225, 150]}}},
   "/vinylsocks": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -1150], "Size": [152, 150]}}},
-  "/vinyltail": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -555], "Size": [135, 150]}}}
+  "/vinyltail": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -555], "Size": [135, 150]}}},
+  "/whiningarmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Offset": [0, -150], "Size": [147, 150]}}},
+  "/yellingarmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Offset": [0, -600], "Size": [153, 150]}}}
 }
