--- a/tags/thepleasurehub.json
+++ b/tags/thepleasurehub.json
@@ -1,6 +1,7 @@
 {
 "/apexwhattheclop": ["+ocpony", "+questionable"],
 "/archmagesea": ["+nonpony"],
+"/armoredshiningarmor": ["+shiningarmor"],
 "/aussticky": ["+ocpony"],
 "/cadancedress": ["+princesscadance"],
 "/cadancemean": ["+princesscadance"],
@@ -15,7 +16,8 @@
 "/derpoof": ["+derpy", "+fluffy"],
 "/enyosadventure": ["+ocpony"],
 "/enyoxtpp": ["+ocpony"],
-"/everythingisfine": ["+ocpony", "+skyrunner"],
+"/everythingisfine": ["+skyrunner"],
+"/eyebulgearmor": ["+shiningarmor"],
 "/gildabirds": ["+gilda"],
 "/gildacocked": ["+gilda"],
 "/gildacrazed": ["+gilda"],
@@ -28,12 +30,15 @@
 "/gildawhatever": ["+gilda"],
 "/lunatail": ["+princessluna"],
 "/scootashocked": ["+scootaloo"],
-"/skycarbonlick": ["+ocpony", "+skyrunner"],
-"/skyenyodrag": ["+ocpony", "+skyrunner"],
-"/skyfun": ["+fun", "+ocpony", "+questionable", "+skyrunner"],
-"/skylicorn": ["+ocpony", "+skyrunner"],
-"/skyscrunch": ["+ocpony", "+skyrunner"],
+"/skycarbonlick": ["+skyrunner"],
+"/skyenyodrag": ["+skyrunner"],
+"/skyfun": ["+fun", "+questionable", "+skyrunner"],
+"/skylicorn": ["+skyrunner"],
+"/skyscrunch": ["+skyrunner"],
 "/tenarispony": ["+ocpony"],
+"/twilightarmor": ["+filly", "+shiningarmor", "+twilightsparkle"],
 "/vinylsocks": ["+vinylscratch"],
-"/vinyltail": ["+vinylscratch"]
+"/vinyltail": ["+vinylscratch"],
+"/whiningarmor": ["+shiningarmor"],
+"/yellingarmor": ["+shiningarmor"]
 }
