--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -67,6 +67,7 @@ Subreddits:
 - mylittlefortress
 - mylittleicons
 - mylittlekindle
+- mylittlekitchen
 - mylittlelistentothis
 - mylittlelivestream
 - mylittlemango
