Stylesheet/emote/tag updates 2013-07-16

--- a/emotes/thepleasurehub.json
+++ b/emotes/thepleasurehub.json
@@ -14,10 +14,12 @@
   "/colgatestretch": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -1750], "Size": [165, 150]}}},
   "/dashfillysocks": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -2355], "Size": [118, 150]}}},
   "/derpoof": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [-126, -1455], "Size": [127, 150]}}},
+  "/earassault": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Offset": [0, -1200], "Size": [354, 200]}}},
   "/enyosadventure": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [-118, -2355], "Size": [118, 150]}}},
   "/enyoxtpp": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2350], "Size": [201, 150]}}},
   "/everythingisfine": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2500], "Size": [140, 150]}}},
   "/eyebulgearmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Size": [116, 150]}}},
+  "/gettingonmynerves": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Offset": [0, -200], "Size": [231, 200]}}},
   "/gildabirds": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -1000], "Size": [150, 150]}}},
   "/gildacocked": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -2050], "Size": [150, 150]}}},
   "/gildacrazed": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -2055], "Size": [160, 150]}}},
@@ -29,6 +31,11 @@
   "/gildawhat": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -1905], "Size": [150, 150]}}},
   "/gildawhatever": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -1005], "Size": [150, 150]}}},
   "/lunatail": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -400], "Size": [137, 150]}}},
+  "/pdexited": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Offset": [0, -400], "Size": [284, 200]}}},
+  "/pdgame": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Offset": [0, -1000], "Size": [320, 200]}}},
+  "/pdkiss": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Offset": [0, -1400], "Size": [361, 200]}}},
+  "/pdpull": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Offset": [0, -600], "Size": [356, 200]}}},
+  "/sadpinkpone": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Size": [233, 200]}}},
   "/scootashocked": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -550], "Size": [120, 150]}}},
   "/skycarbonlick": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -1300], "Size": [235, 150]}}},
   "/skyenyodrag": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -705], "Size": [150, 150]}}},
@@ -37,6 +44,7 @@
   "/skyscrunch": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Size": [200, 200]}}},
   "/tenarispony": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -700], "Size": [150, 150]}}},
   "/twilightarmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Offset": [0, -300], "Size": [225, 150]}}},
+  "/uwotm8": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/E6K6tEouNgilM3uM.png", "Offset": [0, -800], "Size": [356, 200]}}},
   "/vinylsocks": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/Bad8oeArv2CozBsy.png", "Offset": [0, -1150], "Size": [152, 150]}}},
   "/vinyltail": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yEs0aZbPGTknHK8T.png", "Offset": [0, -555], "Size": [135, 150]}}},
   "/whiningarmor": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/vRBd79A9gQunSff9.png", "Offset": [0, -150], "Size": [147, 150]}}},
