--- a/tags/thepleasurehub.json
+++ b/tags/thepleasurehub.json
@@ -14,10 +14,12 @@
 "/colgatestretch": ["+colgate"],
 "/dashfillysocks": ["+rainbowdash"],
 "/derpoof": ["+derpy", "+fluffy"],
+"/earassault": ["+pinkiepie", "+rainbowdash"],
 "/enyosadventure": ["+ocpony"],
 "/enyoxtpp": ["+ocpony"],
 "/everythingisfine": ["+skyrunner"],
 "/eyebulgearmor": ["+shiningarmor"],
+"/gettingonmynerves": ["+pinkiepie", "+rainbowdash"],
 "/gildabirds": ["+gilda"],
 "/gildacocked": ["+gilda"],
 "/gildacrazed": ["+gilda"],
@@ -29,6 +31,11 @@
 "/gildawhat": ["+gilda"],
 "/gildawhatever": ["+gilda"],
 "/lunatail": ["+princessluna"],
+"/pdexited": ["+pinkiepie", "+rainbowdash"],
+"/pdgame": ["+pinkiepie", "+rainbowdash"],
+"/pdkiss": ["+pinkiepie", "+rainbowdash"],
+"/pdpull": ["+pinkiepie", "+rainbowdash"],
+"/sadpinkpone": ["+pinkiepie", "+rainbowdash"],
 "/scootashocked": ["+scootaloo"],
 "/skycarbonlick": ["+skyrunner"],
 "/skyenyodrag": ["+skyrunner"],
@@ -37,6 +44,7 @@
 "/skyscrunch": ["+skyrunner"],
 "/tenarispony": ["+ocpony"],
 "/twilightarmor": ["+filly", "+shiningarmor", "+twilightsparkle"],
+"/uwotm8": ["+nsfw", "+pinkiepie"],
 "/vinylsocks": ["+vinylscratch"],
 "/vinyltail": ["+vinylscratch"],
 "/whiningarmor": ["+shiningarmor"],
