Domain change from .us to .com (in most places)

--- a/addon/cr-manifest.json
+++ b/addon/cr-manifest.json
@@ -16,7 +16,7 @@
         }
     ],
     "description": "View Reddit ponymotes across the site",
-    "homepage_url": "http://rainbow.mlas1.us/",
+    "homepage_url": "http://rainbow.mlas1.com/",
     "manifest_version": 2,
     "minimum_chrome_version": "20",
     "name": "BetterPonymotes",
