Add +sunsetshimmer tag

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -104,6 +104,7 @@ TagImplications:
   +spike: [+canon, +major]
   +spitfire: [+canon, +major, +pony, +wonderbolt]
   +stevenmagnet: [+canon, +major]
+  +sunsetshimmer: [+canon, +major] # +canon sort of, +major I can only assume
   +tank: [+canon, +major]
   +trixie: [+canon, +major, +pony]
   +twist: [+canon, +major, +pony]
