Add r/mylittlefriends (heavily cherry-picked)

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -65,6 +65,7 @@ Subreddits:
 - mylittlefalloutdiary
 - mylittlefoodmanes
 - mylittlefortress
+- mylittlefriends
 - mylittleicons
 - mylittlekindle
 - mylittlekitchen
