Re-add r/tbpimagedump2

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -110,6 +110,7 @@ Subreddits:
 - themirishponies
 - thepleasurehub
 - tbpimagedump
+- tbpimagedump2
 - thebestpony
 - twidashmotes
 - twilightsparkle
