Add batpony tags and fix some other tags

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -135,34 +135,40 @@ TagImplications:
   +soarin: [+canon, +bgpony, +pony, +wonderbolt]
 
   # OC's
-  +apathia: [+oc, +ocpony]
-  +blackjack: [+oc, +ocpony]
-  +calamity: [+oc, +ocpony]
-  +daylightdarkle: [+oc, +ocpony]
-  +discentia: [+oc, +ocpony]
+  +apathia: [+oc, +ocpony, +pony]
+  +blackjack: [+oc, +ocpony, +pony]
+  +calamity: [+oc, +ocpony, +pony]
+  +daylightdarkle: [+oc, +ocpony, +pony]
+  +discentia: [+oc, +ocpony, +pony]
   +eris: [+discord, +oc] # +discord so it shows up somewhere
-  +futashy: [+fluttershy, +oc, +ocpony]
-  +jappleack: [+applejack, +oc, +ocpony]
-  +karma: [+oc, +ocpony]
-  +littlepip: [+oc, +ocpony]
-  +milkyway: [+oc, +ocpony]
-  +murkynumberseven: [+oc, +ocpony]
-  +raynestorm: [+oc, +ocpony]
-  +skyrunner: [+oc, +ocpony]
-  +snowdrop: [+oc, +ocpony]
-  +surprise: [+oc, +ocpony]
-  +wildfire: [+oc, +ocpony]
-  +velvetremedy: [+oc, +ocpony]
+  +futashy: [+fluttershy, +oc, +ocpony, +pony]
+  +jappleack: [+applejack, +oc, +ocpony, +pony]
+  +karma: [+oc, +ocpony, +pony]
+  +littlepip: [+oc, +ocpony, +pony]
+  +milkyway: [+oc, +ocpony, +pony]
+  +murkynumberseven: [+oc, +ocpony, +pony]
+  +raynestorm: [+oc, +ocpony, +pony]
+  +skyrunner: [+oc, +ocpony, +pony]
+  +snowdrop: [+oc, +ocpony, +pony]
+  +surprise: [+oc, +ocpony, +pony]
+  +wildfire: [+oc, +ocpony, +pony]
+  +velvetremedy: [+oc, +ocpony, +pony]
+
+  # r/batquisition batponies
+  +blossom: [+oc, +ocpony, +batpony]
+  +echo: [+oc, +ocpony, +batpony]
+  +mosina: [+oc, +ocpony, +batpony]
+  +speck: [+oc, +ocpony, +batpony]
 
   # Nonpony
-  +damon: [+nonpony]
   +spiderman: [+nonpony]
   +squidward: [+nonpony]
 
   # Misc implications
   +misc: [+canon]
   +nsfw: [+questionable]
-  +ocpony: [+oc]
+  +ocpony: [+oc, +pony]
+  +batpony: [+pony]
   +smooze: [+oldgen]
   +foodmane: [+mashup]
 
