--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -22,7 +22,7 @@ HiddenTags:
 TagAliases:
   +applejack: [+aj]
   +fluttershy: [+fs]
-  +pinkiepie: [ +pp]
+  +pinkiepie: [+pp]
   +rainbowdash: [+rbd, +rd]
   +twilightsparkle: [+ts]
 
@@ -168,7 +168,7 @@ TagImplications:
   +misc: [+canon]
   +nsfw: [+questionable]
   +ocpony: [+oc, +pony]
-  +batpony: [+pony]
+  +batpony: [+pony, +oc]
   +smooze: [+oldgen]
   +foodmane: [+mashup]
 
