Remove batpony tags

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -154,12 +154,6 @@ TagImplications:
   +wildfire: [+oc, +ocpony, +pony]
   +velvetremedy: [+oc, +ocpony, +pony]
 
-  # r/batquisition batponies
-  +blossom: [+oc, +ocpony, +batpony]
-  +echo: [+oc, +ocpony, +batpony]
-  +mosina: [+oc, +ocpony, +batpony]
-  +speck: [+oc, +ocpony, +batpony]
-
   # Nonpony
   +spiderman: [+nonpony]
   +squidward: [+nonpony]
@@ -168,7 +162,7 @@ TagImplications:
   +misc: [+canon]
   +nsfw: [+questionable]
   +ocpony: [+oc, +pony]
-  +batpony: [+pony, +oc]
+  +batpony: [+pony, +oc, +ocpony]
   +smooze: [+oldgen]
   +foodmane: [+mashup]
 
