--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -22,6 +22,7 @@ Subreddits:
 - bigmacintosh
 - bonquisition
 - braeburnquisition
+- cianimotes
 - clopclop
 - cloudchasermotes
 - comeinside
@@ -155,6 +156,7 @@ Generation:
 
 Sorting:
 - [r/mylittlepony, "*"] # Not actually used, but a good failsafe
+- [r/cianimotes, "*"] # Whee.
 - [r/mylittleandysonic1, "*"] # These three rules resolve a lot of things
 - [r/mlas1emotes, "*"]        # implicitly, which is unfortunate, but generally
 - [r/mlas1animotes, "*"]      # correct.
