--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -85,6 +85,7 @@ TagImplications:
   +gilda: [+canon, +major]
   +grannysmith: [+canon, +major, +pony]
   +gummy: [+canon, +major]
+  +harshwhinny: [+canon, +major, +pony]
   +hoitytoity: [+canon, +major, +pony]
   +ironwill: [+canon, +major]
   +kingsombra: [+canon, +major, +pony, +villian]
