--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -95,6 +95,7 @@ TagImplications:
   +nightmaremoon: [+canon, +major, +pony, +villian]
   +opalescence: [+canon, +major]
   +owlowiscious: [+canon, +major]
+  +peachbottom: [+canon, +pony]
   +photofinish: [+canon, +major, +pony]
   +pip: [+canon, +major, +pony]
   +princesscelestia: [+canon, +major, +pony, +princess]
