Chrome fix: add options.html to web_accessible_resources as this is apparently now being checked

--- a/addon/cr-manifest.json
+++ b/addon/cr-manifest.json
@@ -34,6 +34,7 @@
         "combiners-nsfw.css",
         "extracss-pure.css",
         "extracss-webkit.css",
-        "gif-animotes.css"
+        "gif-animotes.css",
+        "options.html"
     ]
 }
