--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -1,5 +1,6 @@
 RootTags:
 - +canon
+- +equestriagirls
 - +oc
 - +nonpony
 - +pinkiepipes
@@ -46,6 +47,8 @@ TagAliases:
   +opalescence: [+cat]
 
   +pinkamina: [+pinkamena, +diane]
+
+  +equestriagirls: [+eqg]
 
 TagImplications:
   # Special tags
@@ -178,6 +181,7 @@ OtherTags:
   - +dealwithit
   - +doctorwho
   - +drinking
+  - +equestriagirls
   - +filly
   - +fluffy
   - +foe
