Add two misc. new tags

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -114,6 +114,7 @@ TagImplications:
   +trixie: [+canon, +major, +pony]
   +twist: [+canon, +major, +pony]
   +vinylscratch: [+canon, +major, +pony]
+  +winona: [+canon, +major]
   +zecora: [+canon, +major, +pony]
 
   # Background characters
@@ -168,6 +169,7 @@ TagImplications:
   +nsfw: [+questionable]
   +ocpony: [+oc, +pony]
   +batpony: [+pony, +oc, +ocpony]
+  +scepter: [+misc]
   +smooze: [+oldgen]
   +foodmane: [+mashup]
 
