Tiny tag fix for +scepter

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -169,7 +169,7 @@ TagImplications:
   +nsfw: [+questionable]
   +ocpony: [+oc, +pony]
   +batpony: [+pony, +oc, +ocpony]
-  +scepter: [+misc]
+  +scepter: [+misc, +canon]
   +smooze: [+oldgen]
   +foodmane: [+mashup]
 
