--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -172,7 +172,9 @@ Conflicts:
   /adviceshy:     r/mlploungesteamgroup   # Conflict with r/adviceponies, which
                                           # came first, but I like this one more.
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
+  /egstare:       r/equestriagirls        # Conflict with r/themirishponies
   /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
+  /flutterface:   r/equestriagirls        # Conflict with r/themirishponies
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
