Conflict fix on /flutterbat

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -22,6 +22,7 @@ Subreddits:
 - bigmacintosh
 - bonquisition
 - braeburnquisition
+- cadance
 - cianimotes
 - clopclop
 - cloudchasermotes
@@ -177,6 +178,7 @@ Conflicts:
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /egstare:       r/equestriagirls        # Conflict with r/themirishponies
   /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
+  /flutterbat:    r/flutterlounge         # Conflict with r/ponymotes
   /flutterface:   r/equestriagirls        # Conflict with r/themirishponies
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
