--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -13,6 +13,7 @@ Subreddits:
 - ainbowdash
 - anotherponymotessub
 - applebloom
+- appledashquisition
 - applejack
 - arborus
 - babsquisition
@@ -180,6 +181,7 @@ Conflicts:
   /egstare:       r/equestriagirls        # Conflict with r/themirishponies
   /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
   /flutterbat:    r/flutterlounge         # Conflict with r/ponymotes
+  /flitterbucket: r/flitterquisition      # (Temporary?) Conflict with r/pinkquisition
   /flutterface:   r/equestriagirls        # Conflict with r/themirishponies
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
