--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -77,6 +77,7 @@ Subreddits:
 - mylittleicons
 - mylittlekindle
 - mylittlekitchen
+- mylittleleague
 - mylittlelistentothis
 - mylittlelivestream
 - mylittlemango
