--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -76,6 +76,7 @@ TagImplications:
   +caketwins: [+canon, +major, +pony]
   +cheerilee: [+canon, +major, +pony]
   +queenchrysalis: [+canon, +major, +pony, +villian]
+  +cheesesandwich: [+canon, +major, +pony]
   +cockatrice: [+canon, +major]
   +crankydoodle: [+canon, +major]
   +daringdo: [+canon, +major, +pony]
