--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -128,6 +128,7 @@ Subreddits:
 - thebestpony
 - themirishponies
 - thepleasurehub
+- trixquisition
 - twidashmotes
 - twilightsparkle
 - twiquisition
