--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -75,14 +75,14 @@ TagImplications:
   +princesscadance: [+canon, +major, +pony]
   +caketwins: [+canon, +major, +pony]
   +cheerilee: [+canon, +major, +pony]
-  +queenchrysalis: [+canon, +major, +pony, +villian]
+  +queenchrysalis: [+canon, +major, +pony, +villain]
   +cheesesandwich: [+canon, +major, +pony]
   +cockatrice: [+canon, +major]
   +crankydoodle: [+canon, +major]
   +daringdo: [+canon, +major, +pony]
   +derpy: [+canon, +major, +pony]
   +diamondtiara: [+canon, +major, +pony]
-  +discord: [+canon, +major, +villian]
+  +discord: [+canon, +major, +villain]
   +fancypants: [+canon, +major, +pony]
   +fleurdelis: [+canon, +major, +pony]
   +flimandflam: [+canon, +major, +pony]
@@ -92,11 +92,11 @@ TagImplications:
   +harshwhinny: [+canon, +major, +pony]
   +hoitytoity: [+canon, +major, +pony]
   +ironwill: [+canon, +major]
-  +kingsombra: [+canon, +major, +pony, +villian]
+  +kingsombra: [+canon, +major, +pony, +villain]
   +lightningdust: [+canon, +major, +pony]
   +maredowell: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
-  +nightmaremoon: [+canon, +major, +pony, +villian]
+  +nightmaremoon: [+canon, +major, +pony, +villain]
   +opalescence: [+canon, +major]
   +owlowiscious: [+canon, +major]
   +peachbottom: [+canon, +pony]
@@ -119,12 +119,12 @@ TagImplications:
   +zecora: [+canon, +major, +pony]
 
   # Background characters
-  +ahuizotl: [+canon, +villian]
+  +ahuizotl: [+canon, +villain]
   +beautybrass: [+canon, +bgpony, +pony]
   +berrypunch: [+canon, +bgpony, +pony]
   +bonbon: [+canon, +bgpony, +pony]
   +carrottop: [+canon, +bgpony, +pony]
-  +changeling: [+canon, +villian] # not really +pony though. ugh
+  +changeling: [+canon, +villain] # not really +pony though. ugh
   +cloudchaser: [+canon, +bgpony, +pony]
   +colgate: [+canon, +bgpony, +pony]
   +daisy: [+canon, +bgpony, +pony]
