Stylesheet/emote/tag updates 2014-02-23

--- a/emotes/appledashquisition.json
+++ b/emotes/appledashquisition.json
@@ -12,6 +12,7 @@
   "/adplayful": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/J60iMMd9nFiOXSg5.png", "Size": [225, 177]}}},
   "/adponyride": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/HqIbwtNfKawvo4S_.png", "Size": [241, 208]}}},
   "/adpuckerup": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/-OTc4YKcZs7OWErY.png", "Size": [226, 222]}}},
+  "/adsad": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/auBleJnVrBgFYqtn.png", "Size": [225, 175]}}},
   "/adsocks": {"Emotes": {"": {"Image": "http://e.thumbs.redditmedia.com/r_n8sMJQyhjS8Xcd.png", "Size": [300, 187]}}},
   "/adsparx": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/Mz2n88oKimtM6P-l.png", "Size": [256, 169]}}},
   "/adwingboner": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/AnzJWFvDDqfxe2so.png", "Size": [225, 201]}}},
