--- a/tags/appledashquisition.json
+++ b/tags/appledashquisition.json
@@ -12,6 +12,7 @@
 "/adplayful": ["+applejack", "+rainbowdash"],
 "/adponyride": ["+applejack", "+rainbowdash"],
 "/adpuckerup": ["+applejack", "+rainbowdash"],
+"/adsad": ["+applejack", "+rainbowdash"],
 "/adsocks": ["+applejack", "+rainbowdash"],
 "/adsparx": ["+applejack", "+rainbowdash"],
 "/adwingboner": ["+applejack", "+rainbowdash"],
