Stylesheet/emote/tag updates 2014-03-02

--- a/tags/appledashquisition.json
+++ b/tags/appledashquisition.json
@@ -1,24 +1,47 @@
 {
+"/adbath": ["+applejack", "+rainbowdash"],
+"/adbored": ["+applejack", "+rainbowdash"],
+"/adbuttpillow": ["+applejack", "+rainbowdash"],
 "/adcanon": ["+applejack", "+rainbowdash"],
+"/adcuddle": ["+applejack", "+rainbowdash"],
 "/adcuddles": ["+applejack", "+rainbowdash"],
 "/adcute": ["+applejack", "+rainbowdash"],
+"/addesire": ["+applejack", "+rainbowdash"],
+"/addespair": ["+broken"],
+"/adelbow": ["+applejack", "+rainbowdash"],
+"/adfeed": ["+applejack", "+rainbowdash"],
+"/adfinishline": ["+applejack", "+rainbowdash"],
+"/adflank": ["+applejack", "+rainbowdash"],
+"/adglow": ["+applejack", "+rainbowdash"],
 "/adhaylove": ["+applejack", "+rainbowdash"],
 "/adhug": ["+applejack", "+rainbowdash"],
 "/adkiss": ["+applejack", "+rainbowdash"],
+"/adkissy": ["+applejack", "+rainbowdash"],
 "/adlean": ["+applejack", "+rainbowdash"],
 "/admaredown": ["+applejack", "+rainbowdash"],
+"/admoustache": ["+applejack", "+rainbowdash"],
 "/adnuzzle": ["+applejack", "+rainbowdash"],
 "/adpassion": ["+applejack", "+rainbowdash"],
+"/adpeck": ["+applejack", "+rainbowdash"],
 "/adplayful": ["+applejack", "+rainbowdash"],
 "/adponyride": ["+applejack", "+rainbowdash"],
 "/adpuckerup": ["+applejack", "+rainbowdash"],
+"/adreadyforbees": ["+applejack", "+rainbowdash"],
 "/adsad": ["+applejack", "+rainbowdash"],
+"/adscared": ["+broken"],
+"/adsleep": ["+applejack", "+rainbowdash"],
 "/adsocks": ["+applejack", "+rainbowdash"],
 "/adsparx": ["+applejack", "+rainbowdash"],
 "/adwingboner": ["+applejack", "+rainbowdash"],
+"/ajdribbles": ["+applejack"],
 "/applebashful": ["+applejack", "+rainbowdash"],
 "/burchabow": ["+rainbowdash"],
+"/canada": ["+rainbowdash"],
 "/chibiad": ["+applejack", "+rainbowdash"],
+"/ejr1icgm1wsk26fb": ["+applejack", "+rainbowdash"],
 "/fallweatherfriends": ["+applejack", "+rainbowdash"],
+"/highhoof3": ["+broken"],
+"/sweden": ["+rainbowdash"],
+"/theylooksoreadytofuckeachothersenseless": ["+applejack", "+rainbowdash"],
 "/yourflankismine": ["+applejack", "+rainbowdash"]
 }
