Stylesheet/emote/tag updates 2014-03-03

--- a/tags/appledashquisition.json
+++ b/tags/appledashquisition.json
@@ -7,7 +7,7 @@
 "/adcuddles": ["+applejack", "+rainbowdash"],
 "/adcute": ["+applejack", "+rainbowdash"],
 "/addesire": ["+applejack", "+rainbowdash"],
-"/addespair": ["+broken"],
+"/addespair": ["+applejack", "+rainbowdash"],
 "/adelbow": ["+applejack", "+rainbowdash"],
 "/adfeed": ["+applejack", "+rainbowdash"],
 "/adfinishline": ["+applejack", "+rainbowdash"],
@@ -28,7 +28,7 @@
 "/adpuckerup": ["+applejack", "+rainbowdash"],
 "/adreadyforbees": ["+applejack", "+rainbowdash"],
 "/adsad": ["+applejack", "+rainbowdash"],
-"/adscared": ["+broken"],
+"/adscared": ["+applejack", "+rainbowdash"],
 "/adsleep": ["+applejack", "+rainbowdash"],
 "/adsocks": ["+applejack", "+rainbowdash"],
 "/adsparx": ["+applejack", "+rainbowdash"],
@@ -40,7 +40,7 @@
 "/chibiad": ["+applejack", "+rainbowdash"],
 "/ejr1icgm1wsk26fb": ["+applejack", "+rainbowdash"],
 "/fallweatherfriends": ["+applejack", "+rainbowdash"],
-"/highhoof3": ["+broken"],
+"/highhoof3": ["+applejack", "+rainbowdash"],
 "/sweden": ["+rainbowdash"],
 "/theylooksoreadytofuckeachothersenseless": ["+applejack", "+rainbowdash"],
 "/yourflankismine": ["+applejack", "+rainbowdash"]
