--- a/emotes/appledashquisition.json
+++ b/emotes/appledashquisition.json
@@ -1,47 +1,47 @@
 {
-  "/adbath": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/qaO9VDdLmN1JgYOA.png", "Size": [225, 149]}}},
-  "/adbored": {"Emotes": {"": {"Image": "http://e.thumbs.redditmedia.com/jsxnF5U3eGXmxmeR.png", "Size": [225, 145]}}},
+  "/adbath": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/r8PvoZja3vSPg1_I.png", "Offset": [-300, 0], "Size": [225, 149]}}},
+  "/adbored": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/mwDa_-tReSta84CU.png", "Size": [225, 145]}}},
   "/adbuttpillow": {"Emotes": {"": {"Image": "http://e.thumbs.redditmedia.com/z2AvBJplBm_YKio4.png", "Size": [223, 223]}}},
-  "/adcanon": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/dlevykcrqAS-_ghG.png", "Size": [250, 157]}}},
-  "/adcuddle": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/DdrUaB_LVxtNtqI9.png", "Size": [201, 189]}}},
-  "/adcuddles": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/CZb4n35SLRROeJaB.png", "Size": [332, 151]}}},
-  "/adcute": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/DctRMoKHC5JLTAJY.png", "Size": [225, 155]}}},
-  "/addesire": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/lpaA6cYUA9Q5P3h_.png", "Size": [256, 128]}}},
-  "/addespair": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/eQOGdwx3aoG_dTyf.png", "Size": [225, 162]}}},
-  "/adelbow": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/zbXX-0-b99ooRuKD.png", "Size": [239, 210]}}},
-  "/adfeed": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/2RNx2rUDCcZGDiGK.png", "Size": [223, 224]}}},
-  "/adfinishline": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/0LQZ4kjx-zzN_PMZ.png", "Size": [225, 107]}}},
-  "/adflank": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/uT4Xyr6rlh-LTMvo.png", "Size": [245, 204]}}},
-  "/adglow": {"Emotes": {"": {"Image": "http://e.thumbs.redditmedia.com/igcspHRaYZ7FE6gF.png", "Size": [218, 203]}}},
-  "/adhaylove": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/nlB3PXBTQ30Yf22s.png", "Size": [255, 196]}}},
-  "/adhug": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/O_JXMA9KVzijJJpo.png", "Size": [225, 221]}}},
-  "/adkiss": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/6L_WeF2IgUcoyG_r.png", "Size": [257, 195]}}},
-  "/adkissy": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/an1OCTvW_Vz5Gc6C.png", "Size": [233, 182]}}},
-  "/adlean": {"Emotes": {"": {"Image": "http://e.thumbs.redditmedia.com/GlBi-g0_S7ye8rrF.png", "Size": [225, 251]}}},
-  "/admaredown": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/j_4uQElJLX08pncx.png", "Size": [283, 177]}}},
-  "/admoustache": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/yAOWg394Ei5kNz9N.png", "Size": [283, 177]}}},
-  "/adnuzzle": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/h6NOdfyCKK4Cp6nc.png", "Size": [180, 103]}}},
-  "/adpassion": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/e4OinfOk0GGGcZbg.png", "Size": [225, 126]}}},
-  "/adpeck": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/MT9-zW37cBl1DN_m.png", "Size": [207, 171]}}},
-  "/adplayful": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/J60iMMd9nFiOXSg5.png", "Size": [225, 177]}}},
-  "/adponyride": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/HqIbwtNfKawvo4S_.png", "Size": [241, 208]}}},
-  "/adpuckerup": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/-OTc4YKcZs7OWErY.png", "Size": [226, 222]}}},
-  "/adreadyforbees": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/mst3D9CnCDbe5a1Q.png", "Size": [239, 209]}}},
-  "/adsad": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/auBleJnVrBgFYqtn.png", "Size": [225, 175]}}},
-  "/adscared": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/ZtbQBijJZw3nMuZK.png", "Size": [254, 197]}}},
-  "/adsleep": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/VevNjIFrvcg8wHj8.png", "Size": [231, 216]}}},
-  "/adsocks": {"Emotes": {"": {"Image": "http://e.thumbs.redditmedia.com/r_n8sMJQyhjS8Xcd.png", "Size": [300, 187]}}},
-  "/adsparx": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/Mz2n88oKimtM6P-l.png", "Size": [256, 169]}}},
-  "/adwingboner": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/AnzJWFvDDqfxe2so.png", "Size": [225, 201]}}},
-  "/ajdribbles": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/MB-n9jLjlVWxZqQA.png", "Size": [236, 213]}}},
-  "/applebashful": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/PJTcM8rXOkrFhRqb.png", "Size": [225, 148]}}},
+  "/adcanon": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/KHThVGcWTGsOP-hn.png", "Size": [250, 157]}}},
+  "/adcuddle": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/0Mklm89aGRWBs14T.png", "Offset": [-300, -300], "Size": [201, 189]}}},
+  "/adcuddles": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/ILXAvyzPUTkQ6uUx.png", "Offset": [0, -350], "Size": [332, 151]}}},
+  "/adcute": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/X5kHCQTvD8ec4cEh.png", "Offset": [-300, -300], "Size": [225, 155]}}},
+  "/addesire": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/VihsufdEpUMb7NoB.png", "Offset": [-300, -300], "Size": [256, 128]}}},
+  "/addespair": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/0Mklm89aGRWBs14T.png", "Offset": [-300, 0], "Size": [225, 162]}}},
+  "/adelbow": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/X5kHCQTvD8ec4cEh.png", "Size": [239, 210]}}},
+  "/adfeed": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/9EpVw_fcJFc3NwfV.png", "Offset": [0, -300], "Size": [223, 224]}}},
+  "/adfinishline": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/VihsufdEpUMb7NoB.png", "Offset": [-300, 0], "Size": [225, 107]}}},
+  "/adflank": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/r8PvoZja3vSPg1_I.png", "Size": [245, 204]}}},
+  "/adglow": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/X5kHCQTvD8ec4cEh.png", "Offset": [0, -300], "Size": [218, 203]}}},
+  "/adhaylove": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/X5kHCQTvD8ec4cEh.png", "Offset": [-300, 0], "Size": [255, 196]}}},
+  "/adhug": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/ILXAvyzPUTkQ6uUx.png", "Size": [225, 221]}}},
+  "/adkiss": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/r8PvoZja3vSPg1_I.png", "Offset": [0, -300], "Size": [257, 195]}}},
+  "/adkissy": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/mwDa_-tReSta84CU.png", "Offset": [-300, -300], "Size": [233, 182]}}},
+  "/adlean": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/0Mklm89aGRWBs14T.png", "Size": [225, 251]}}},
+  "/admaredown": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/mwDa_-tReSta84CU.png", "Offset": [0, -300], "Size": [283, 177]}}},
+  "/admoustache": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/VihsufdEpUMb7NoB.png", "Size": [283, 177]}}},
+  "/adnuzzle": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/r8PvoZja3vSPg1_I.png", "Offset": [-300, -300], "Size": [180, 103]}}},
+  "/adpassion": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/ILXAvyzPUTkQ6uUx.png", "Offset": [-350, 0], "Size": [225, 126]}}},
+  "/adpeck": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/VihsufdEpUMb7NoB.png", "Offset": [0, -300], "Size": [207, 171]}}},
+  "/adplayful": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/i8Vw9CUQ_yQv2iP5.png", "Offset": [-300, 0], "Size": [225, 177]}}},
+  "/adponyride": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/ILXAvyzPUTkQ6uUx.png", "Offset": [-350, -350], "Size": [241, 208]}}},
+  "/adpuckerup": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/i8Vw9CUQ_yQv2iP5.png", "Offset": [-300, -300], "Size": [226, 222]}}},
+  "/adreadyforbees": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/KHThVGcWTGsOP-hn.png", "Offset": [-300, -300], "Size": [239, 209]}}},
+  "/adsad": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/yqBRTr9pKUVpn97A.png", "Size": [225, 175]}}},
+  "/adscared": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/9EpVw_fcJFc3NwfV.png", "Size": [254, 197]}}},
+  "/adsleep": {"Emotes": {"": {"Image": "http://b.thumbs.redditmedia.com/mwDa_-tReSta84CU.png", "Offset": [-300, 0], "Size": [231, 216]}}},
+  "/adsocks": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/yqBRTr9pKUVpn97A.png", "Offset": [-300, -300], "Size": [300, 187]}}},
+  "/adsparx": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/i8Vw9CUQ_yQv2iP5.png", "Offset": [0, -300], "Size": [256, 169]}}},
+  "/adwingboner": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/yqBRTr9pKUVpn97A.png", "Offset": [-300, 0], "Size": [225, 201]}}},
+  "/ajdribbles": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/i8Vw9CUQ_yQv2iP5.png", "Size": [236, 213]}}},
+  "/applebashful": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/0Mklm89aGRWBs14T.png", "Offset": [0, -300], "Size": [225, 148]}}},
   "/burchabow": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/nS-4uRoMJuC5saiH.png", "Size": [256, 170]}}},
   "/canada": {"Emotes": {"": {"Image": "http://e.thumbs.redditmedia.com/g8okAMoU7kgShBpp.png", "Size": [512, 342]}}},
-  "/chibiad": {"Emotes": {"": {"Image": "http://d.thumbs.redditmedia.com/SQBHZELYEcIZOJHo.png", "Size": [224, 224]}}},
+  "/chibiad": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/KHThVGcWTGsOP-hn.png", "Offset": [0, -300], "Size": [224, 224]}}},
   "/ejr1icgm1wsk26fb": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/94a0yps5ZBNPZ5th.png", "Size": [450, 289]}}},
-  "/fallweatherfriends": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/PWimXCgI6Iq3Pl1x.png", "Size": [231, 216]}}},
-  "/highhoof3": {"Emotes": {"": {"Image": "http://a.thumbs.redditmedia.com/fccMmLw03z3ZcXkB.png", "Size": [225, 149]}}},
+  "/fallweatherfriends": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/yqBRTr9pKUVpn97A.png", "Offset": [0, -300], "Size": [231, 216]}}},
+  "/highhoof3": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/9EpVw_fcJFc3NwfV.png", "Offset": [-300, 0], "Size": [225, 149]}}},
   "/sweden": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/JsmLKefgj0kX5vbS.png", "Size": [555, 360]}}},
-  "/theylooksoreadytofuckeachothersenseless": {"Emotes": {"": {"Image": "http://f.thumbs.redditmedia.com/GUyXBglxMGV3R-eG.png", "Size": [299, 167]}}},
-  "/yourflankismine": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/0oAkQpZ_4vSCZxah.png", "Size": [223, 224]}}}
+  "/theylooksoreadytofuckeachothersenseless": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/KHThVGcWTGsOP-hn.png", "Offset": [-300, 0], "Size": [299, 167]}}},
+  "/yourflankismine": {"Emotes": {"": {"Image": "http://c.thumbs.redditmedia.com/9EpVw_fcJFc3NwfV.png", "Offset": [-300, -300], "Size": [223, 224]}}}
 }
