--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -194,7 +194,9 @@ Conflicts:
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
+  /mad:           r/flutterlounge         # Conflict with r/sweetie_belle
   /mybodyisready: r/marmemotes            # Conflict with r/mylittlemango
+  /nerdscratch:   r/ponymotes             # Conflict with r/vinylscratch
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
   /rabwant:       r/mylittlelivestream    # Conflict with r/applebloom
   /raricoffee:    r/onetrueprincess       # Conflict with r/marmemotes
@@ -209,6 +211,7 @@ Conflicts:
   /weegee:        r/vinylscratch          # Conflict with r/thebestpony, which
                                           # came first, but they're the same
   /woonajuice:    r/mylittledaww          # Duplicated to r/mylittleanime
+  /wow:           r/lyraquisition         # Conflict with r/sweetie_belle
 
 RootVariantEmotes:
   r/mylittleanime:
