--- a/addon/cr-manifest.json
+++ b/addon/cr-manifest.json
@@ -16,7 +16,7 @@
         }
     ],
     "description": "View Reddit ponymotes across the site",
-    "homepage_url": "http://rainbow.mlas1.com/",
+    "homepage_url": "http://rainbow.adery.net/",
     "manifest_version": 2,
     "minimum_chrome_version": "20",
     "name": "BetterPonymotes",
