--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -95,6 +95,7 @@ TagImplications:
   +kingsombra: [+canon, +major, +pony, +villain]
   +lightningdust: [+canon, +major, +pony]
   +maredowell: [+canon, +major, +pony]
+  +maud: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
   +nightmaremoon: [+canon, +major, +pony, +villain]
   +opalescence: [+canon, +major]
