Add r/adery, add r/ademotes, remove r/comeinside, remove r/mlas1emotes, remove r/mlas1emotes2

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -9,6 +9,8 @@
 ################################################################################
 
 Subreddits:
+- adery
+- ademotes
 - adviceponies
 - ainbowdash
 - anotherponymotessub
@@ -29,7 +31,6 @@ Subreddits:
 - cianimotes
 - clopclop
 - cloudchasermotes
-- comeinside
 - cuttershy
 - daylightemotes
 - desktopponies
@@ -50,8 +51,6 @@ Subreddits:
 - marmemotes
 - minuette
 - mlas1animotes
-- mlas1emotes
-- mlas1emotes2
 - mlas1imagedump
 - mlas1party
 - mlpdrawingschool
