--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -50,6 +50,7 @@ Subreddits:
 - lyra
 - lyraquisition
 - marmemotes
+- maudpie
 - minuette
 - mlas1animotes
 - mlas1imagedump
@@ -194,6 +195,7 @@ Conflicts:
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
+  /maudsmile:     r/ponymotes             # Conflict with r/maudpie
   /mybodyisready: r/marmemotes            # Conflict with r/mylittlemango
   /nerdscratch:   r/ponymotes             # Conflict with r/vinylscratch
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
