--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -149,6 +149,7 @@ TagImplications:
   +daylightdarkle: [+oc, +ocpony, +pony]
   +discentia: [+oc, +ocpony, +pony]
   +eris: [+discord, +oc] # +discord so it shows up somewhere
+  +firefly: [+oc, +ocpony, +pony]
   +futashy: [+fluttershy, +oc, +ocpony, +pony]
   +jappleack: [+applejack, +oc, +ocpony, +pony]
   +karma: [+oc, +ocpony, +pony]
