--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -113,6 +113,7 @@ TagImplications:
   +stevenmagnet: [+canon, +major]
   +sunsetshimmer: [+canon, +major] # +canon sort of, +major I can only assume
   +tank: [+canon, +major]
+  +tirek: [+canon, +major, +villain]
   +trixie: [+canon, +major, +pony]
   +twist: [+canon, +major, +pony]
   +vinylscratch: [+canon, +major, +pony]
@@ -120,6 +121,7 @@ TagImplications:
   +zecora: [+canon, +major, +pony]
 
   # Background characters
+  +applefritter: [+canon, +bgpony, +pony]
   +ahuizotl: [+canon, +villain]
   +beautybrass: [+canon, +bgpony, +pony]
   +berrypunch: [+canon, +bgpony, +pony]
