--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -32,6 +32,7 @@ Subreddits:
 - cheesesandwichmlp
 - cianimotes
 - clopclop
+- clopmotes
 - cloudchasermotes
 - cuttershy
 - daylightemotes
@@ -188,6 +189,7 @@ Conflicts:
   /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
   /adviceshy:     r/mlploungesteamgroup   # Conflict with r/adviceponies, which
                                           # came first, but I like this one more.
+  /dtlaugh:       r/berrytrain            # Conflict with r/zponymotes.
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /egstare:       r/equestriagirls        # Conflict with r/themirishponies
   /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
