--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -138,6 +138,7 @@ TagImplications:
   +lotus: [+canon, +bgpony, +pony]
   +lyra: [+canon, +bgpony, +pony]
   +medley: [+canon, +bgpony, +pony]
+  +nurseredheart: [+canon, +bgpony, +pony]
   +octavia: [+canon, +bgpony, +pony]
   +otherpony: [+canon, +bgpony, +pony]
   +roseluck: [+canon, +bgpony, +pony]
