Conflict fix: /tavicheer

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -211,6 +211,7 @@ Conflicts:
   /shrug:         r/vinylscratch          # Conflict with r/mylittlecirclejerk
   /sphlyrafun:    r/mylittlensfw          # Conflict with r/mylittlechaos
   /t18:           r/mylittlefoodmanes     # Conflict with r/tacoshy
+  /tavicheer:     r/taviquisition         # Conflict with r/mlplounge
   /tonightyou:    r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
   /twipoker:      r/mylittlewtf           # Conflict with r/thebestpony
   /weegee:        r/vinylscratch          # Conflict with r/thebestpony, which
