Move site to /bpm/

--- a/addon/cr-manifest.json
+++ b/addon/cr-manifest.json
@@ -16,7 +16,7 @@
         }
     ],
     "description": "View Reddit ponymotes across the site",
-    "homepage_url": "https://ponymotes.net/",
+    "homepage_url": "https://ponymotes.net/bpm/",
     "manifest_version": 2,
     "minimum_chrome_version": "20",
     "name": "BetterPonymotes",
