--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -167,6 +167,7 @@ TagImplications:
   +velvetremedy: [+oc, +ocpony, +pony]
 
   # Nonpony
+  +pokemon: [] # Be nice I guess
   +spiderman: [+nonpony]
   +squidward: [+nonpony]
 
