Misc conflict fixes

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -176,6 +176,7 @@ Generation:
 
 Sorting:
 - [r/mylittlepony, "*"] # Not actually used, but a good failsafe
+- [r/adery, "*"]
 - [r/ademotes, "*"]
 - [r/cianimotes, "*"]
 - [r/mylittleandysonic1, "*"]
@@ -202,6 +203,7 @@ Conflicts:
   /maudsmile:     r/ponymotes             # Conflict with r/maudpie
   /mybodyisready: r/marmemotes            # Conflict with r/mylittlemango
   /nerdscratch:   r/ponymotes             # Conflict with r/vinylscratch
+  /pikachu:       r/ponymotes             # Conflict with r/tacoshy
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
   /rabwant:       r/mylittlelivestream    # Conflict with r/applebloom
   /raricoffee:    r/onetrueprincess       # Conflict with r/marmemotes
