Stylesheet/emote/tag updates 2014-09-21

--- a/tags/applefritter.json
+++ b/tags/applefritter.json
@@ -2,6 +2,7 @@
 "/fritapple": ["+applefritter"],
 "/fritbake": ["+applefritter"],
 "/fritbbbff": ["+applefritter"],
+"/fritblush": ["+applefritter"],
 "/fritbow": ["+applefritter"],
 "/fritchubbie": ["+applefritter"],
 "/fritclapping": ["+animote", "+applefritter"],
@@ -11,6 +12,7 @@
 "/frithappy": ["+applefritter"],
 "/frithmph": ["+applefritter"],
 "/frithoof": ["+applefritter"],
+"/fritjoke": ["+applefritter"],
 "/fritlie": ["+applefritter"],
 "/fritmad": ["+applefritter"],
 "/fritnoway": ["+applefritter"],
@@ -24,6 +26,7 @@
 "/fritsmirk": ["+applefritter"],
 "/fritspet": ["+applefritter"],
 "/fritstanding": ["+animote", "+applefritter"],
+"/fritteehee": ["+applefritter"],
 "/fritter": ["+misc"],
 "/frittrotting": ["+animote", "+applefritter"],
 "/fritwhat": ["+applefritter"],
@@ -31,6 +34,7 @@
 "/rfritapple": ["+v"],
 "/rfritbake": ["+v"],
 "/rfritbbbff": ["+v"],
+"/rfritblush": ["+v"],
 "/rfritbow": ["+v"],
 "/rfritchubbie": ["+v"],
 "/rfritclapping": ["+v"],
@@ -40,6 +44,7 @@
 "/rfrithappy": ["+v"],
 "/rfrithmph": ["+v"],
 "/rfrithoof": ["+v"],
+"/rfritjoke": ["+v"],
 "/rfritlie": ["+v"],
 "/rfritmad": ["+v"],
 "/rfritnoway": ["+v"],
@@ -53,6 +58,7 @@
 "/rfritsmirk": ["+v"],
 "/rfritspet": ["+v"],
 "/rfritstanding": ["+v"],
+"/rfritteehee": ["+v"],
 "/rfritter": ["+v"],
 "/rfrittrotting": ["+v"],
 "/rfritwhat": ["+v"],
